PROJECT( gpm )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8.0 )

SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}" )

INCLUDE( VersionMacros )

SET( DEFAULT_HEADER_INSTALL_DIR include/\${target} )
SET( DEFAULT_LIBRARY_INSTALL_DIR lib/ )
SET( DEFAULT_EXECUTABLE_INSTALL_DIR bin/ )
SET( CMAKE_DEBUG_POSTFIX _debug )
SET( BUILD_SHARED_LIBS NO )

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE( Boost COMPONENTS thread date_time system filesystem program_options signals ) 

FIND_PACKAGE( Qt4 REQUIRED)
ADD_DEFINITIONS( -DQT_NO_KEYWORDS )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/libs/boost/reflect/include )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/libs/boost/rpc/include )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/libs/ )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( /usr/local/BerkeleyDB.5.1/include )

LINK_DIRECTORIES( /usr/local/BerkeleyDB.5.1/lib )
SET( BerkeleyDB_LIBRARY /usr/local/BerkeleyDB.5.1/lib/libdb_cxx.a )
LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )


ADD_SUBDIRECTORY( libs/gpm )
ADD_SUBDIRECTORY( programs/free_market )


